--- a/css do index2.css
+++ b/css do index2.css
@@ -22,16 +22,16 @@ body {
 }
 #divLine {
 	width:700px;
-	background:#EB5CE1;
+	background:#DB7093;
 	height: 1px;
 }
 #divLinks {
 	width:700px;
-	background:#D416A4;	
+	background:#DB7093;	
 }
 #divNav {
-	width:384px;
-	background:#D416A4;
+	width:390px;
+	background:#DB7093;
 	height:36px;
 	margin: 0 auto;
 }
@@ -47,7 +47,7 @@ body {
 	line-height:20px;
 	background:#E59FE3;
 	width:80px;
-	font-size:0.8em;
+	font-size:0.7em;
 	font-weight:bold;
 	color:black;
 	text-align:center;
@@ -60,24 +60,29 @@ body {
 	border:1px solid #C338AC;
 	
 	/*Gradients*/
-	background:-moz-linear-gradient(top, #666, #333);
-	background:-webkit-gradient(linear, left top, left bottom, from(#666), to(#333));	
+	background:-moz-linear-gradient(top, #FFFFFF, #EAADEA);
+	background:-webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#EAADEA));	
 }
 #divNav ul li a:hover {
 	background:#C338AC;
-	background:-moz-linear-gradient(top, #666, #333);
-	background:-webkit-gradient(linear, left top, left bottom, from(#666), to(#333));
+	background:-moz-linear-gradient(top, #FFFFFF, #EAADEA);
+	background:-webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#EAADEA));
 }
 #divNav ul li a.current, #divNav ul li a.current:hover {
 	background:#C338AC;
-	background:-moz-linear-gradient(top, #666, #333);
-	background:-webkit-gradient(linear, left top, left bottom, from(#666), to(#333));
+	background:-moz-linear-gradient(top, #FFFFFF, #EAADEA);
+	background:-webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#EAADEA));
 	color:beige;
 	cursor:default;
 }
+#divLines {
+	width:700px;
+	background:#DB7093;
+	height: 1px;
+}
 #divAbout {
 	width:700px;
-	background:#FDFDFD;
+	background:#CC3366;
 	padding-top:60px;
 	padding-bottom:60px;
 }
@@ -88,8 +93,8 @@ body {
 	border: 1px solid #000;
 	
 	/*Gradients*/
-	background:-moz-linear-gradient(top, #666, #333, #222);
-	background:-webkit-gradient(linear, left top, left bottom, from(#666), to(#222)), color-stop(0.5, #333);
+	background:-moz-linear-gradient(top, #FFFFFF, #EAADEA, #FF6EC7);
+	background:-webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#FF6EC7)), color-stop(0.5, #EAADEA);
 	border-radius:15px;
 	-moz-border-radius:15px;
 	-webkit-border-radius:15px;
@@ -99,7 +104,6 @@ body {
 	-moz-box-shadow:1px 1px 4px #000;
 	-webkit-box-shadow:1px 1px 4px #000;	
 }
-
 #divContent img {
 	float:left;
 	border:1px solid #000;
@@ -108,8 +112,8 @@ body {
 	margin:0.7em;
 	/*Gradients*/
 	
-	background:-moz-linear-gradient(top, #666, #333);
-	background:-webkit-gradient(linear, left top, left bottom, from(#666), to(#333));
+	background:-moz-linear-gradient(top, #FFFFFF, #EAADEA);
+	background:-webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#EAADEA));
 	
 	/*Border Radius*/
 	border-radius:15px;
@@ -130,9 +134,8 @@ body {
 	line-height:1.4em;
 }
 #divFooter {
-	background:#EB5CE1;
+	background:#DB7093;
 	height:10px;
 	width:700px;
-	border-bottom:1px solid #C729D7;
-	
+	border-bottom:1px solid #C729D7;	
 }
