--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,6 +66,7 @@ body {
 	background:#CC3366;
 	padding-top:60px;
 	padding-bottom:60px;
+	border:1px solid black;
 }
 #Resume {
 	background:#CC3366;
